Bug 399096 - nsDOMCacheUpdateService leaks.  r=dcamp, sr=biesi, a=blocker